# countdown_post_train

./: .gitignore  EXPERIMENT_RUNBOOK.md  LICENSE  README.md  requirements.txt
post_train_v2/: .gitignore  README.md  analysis.md  constraints-verl060-vllm091-cu128.txt  constraints-verl071-vllm017-cu128.txt  environment.md  migration_plan.md  open_questions.md  pyproject.toml  requirements-runtime.txt
post_train_v2/configs/common/: .gitkeep  README.md  eval.yaml  paths.yaml  tracking.yaml
post_train_v2/configs/data/: README.md  build_source.yaml  build_splits.yaml
post_train_v2/configs/distributed/: .gitkeep  README.md
post_train_v2/configs/dpo/: .gitkeep  README.md  build.yaml  build_smoke.yaml  train.yaml  train_smoke.yaml
post_train_v2/configs/environment/: README.md  runtime-cu128.json
post_train_v2/configs/eval/: README.md  final_matrix.yaml
post_train_v2/configs/generation/: .gitkeep  README.md  teacher_rollout_2gpu.yaml  teacher_rollout_2gpu_smoke.yaml
post_train_v2/configs/grpo/: .gitkeep  README.md
post_train_v2/configs/pipeline/: README.md  production.yaml  smoke.yaml
post_train_v2/configs/sft/: .gitkeep  README.md  full.yaml  full_smoke.yaml  lora.yaml  lora_smoke.yaml  rft_rollout.yaml  rft_rollout_smoke.yaml  rft_train.yaml  rft_train_smoke.yaml
post_train_v2/data/: README.md
post_train_v2/data/fixtures/: README.md  teacher_smoke_candidates.jsonl
post_train_v2/docs/: .gitkeep  environment_setup.md  next_full_workflow.md
post_train_v2/docs/runbooks/: README.md  acceptance.md  data_and_evaluation.md  dpo.md  final_evaluation.md  full_pipeline.md  grpo.md  recovery.md  supervised_and_rft.md
post_train_v2/scripts/data/: .gitkeep  README.md  build_source.py  build_splits.py
post_train_v2/scripts/dpo/: .gitkeep  README.md  build_dpo_data.py  train_dpo.py
post_train_v2/scripts/env/: README.md  check_runtime.py  smoke_eval_loader.py  smoke_flash_attention.py  smoke_legacy_loader.py  smoke_nccl.py  smoke_teacher_dual_engine.py  smoke_transformers.py  smoke_trl_peft.py  smoke_v2_training.py  smoke_vllm.py  verify_artifacts.py
post_train_v2/scripts/eval/: .gitkeep  README.md  evaluate_matrix.py  evaluate_model.py
post_train_v2/scripts/generation/: .gitkeep  README.md  build_teacher_pool.py
post_train_v2/scripts/grpo/: .gitkeep  README.md  convert_to_parquet.py  export_grpo.py  train_grpo.py
post_train_v2/scripts/pipeline/: README.md  run_pipeline.py
post_train_v2/scripts/sft/: .gitkeep  README.md  build_rft_data.py  merge_lora.py  train_full.py  train_lora.py  train_rft.py
post_train_v2/src/: README.md  __init__.py
post_train_v2/src/artifacts/: README.md  __init__.py  atomic.py  hashing.py  lineage.py  locking.py  manifest.py
post_train_v2/src/config/: README.md  __init__.py  loading.py
post_train_v2/src/countdown/: .gitkeep  README.md  __init__.py  bucketing.py  prompts.py  sampling.py  solver.py  validation.py
post_train_v2/src/data/: .gitkeep  README.md  __init__.py  schema.py  source.py  splits.py
post_train_v2/wheels/: README.md
(+857 files in other folders)
