[project]
name = "countdown-post-train-v2"
version = "0.1.0"
description = "Distributed Countdown post-training with DDP and verl GRPO"
requires-python = "==3.11.*"
dependencies = [
    "accelerate==1.13.0",
    "codetiming",
    "datasets==4.8.5",
    "dill",
    "hydra-core==1.3.2",
    "numpy==1.26.4",
    "opencv-python-headless==4.11.0.86",
    "packaging>=20.0",
    "pandas",
    "peft==0.19.1",
    "pyarrow==19.0.1",
    "pybind11",
    "pylatexenc",
    "ray[default,cgraph]==2.48.0",
    "safetensors==0.7.0",
    "tensorboard",
    "tensordict==0.10.0",
    "tokenizers==0.22.2",
    "torch==2.10.0",
    "torchaudio==2.10.0",
    "torchdata==0.11.0",
    "torchvision==0.25.0",
    "transformers==4.57.6",
    "trl==0.27.0",
    "verl==0.7.1",
    "vllm==0.17.0",
    "wandb",
]

[tool.uv]
package = false
override-dependencies = [
    "opencv-python-headless==4.11.0.86",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "tuna"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
vllm = { path = "wheels/vllm-0.17.0+cu128-cp38-abi3-manylinux_2_35_x86_64.whl" }

