[project]
name = "countdown-post-train-v2"
version = "0.1.0"
description = "Distributed Countdown post-training with DDP and verl GRPO"
requires-python = "==3.11.15"
dependencies = [
    "accelerate==1.7.0",
    "codetiming==1.4.0",
    "datasets==3.6.0",
    "dill==0.3.8",
    "flash-attn==2.7.4.post1",
    "hydra-core==1.3.2",
    "numpy==1.26.4",
    "opencv-python-headless==4.11.0.86",
    "packaging==24.2",
    "pandas==2.2.3",
    "peft==0.15.2",
    "pyarrow==19.0.1",
    "pybind11==2.13.6",
    "pylatexenc==2.10",
    "ray[default,cgraph]==2.48.0",
    "safetensors==0.5.3",
    "tensorboard==2.19.0",
    "tensordict==0.10.0",
    "tokenizers==0.21.2",
    "torch==2.7.0",
    "torchaudio==2.7.0",
    "torchdata==0.11.0",
    "torchvision==0.22.0",
    "transformers==4.53.2",
    "trl==0.19.1",
    "verl==0.6.0",
    "vllm==0.9.1",
    "wandb==0.21.4",
]

[dependency-groups]
dev = [
    "pytest==8.3.5",
]

[tool.uv]
package = false
environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "tuna"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
vllm = { path = "wheels/vllm-0.9.1-cp38-abi3-manylinux1_x86_64.whl" }
flash-attn = { path = "wheels/flash_attn-2.7.4.post1+cu12torch2.7cxx11abiTRUE-cp311-cp311-linux_x86_64.whl" }
